2004-08-22  Tim Waugh  <twaugh@redhat.com>

	* src/WriteGedcom.py (GedcomWriter.export_data): Write individuals
	out in GRAMPS ID order.
	(GedcomWriter.fid): Use GRAMPS ID not DB handle.

	* src/ReadXML.py (GrampsParser.start_object): Set GRAMPS ID.

	* src/WriteXML.py (write_xml_data): Fixed typo causing XML export to
	omit all place definitions.
	(XmlWriter.write_xml_data): Sort person IDs before writing.
	(XmlWriter.write_xml_data): Fixed people output by preventing
	confusion between handles and GRAMPS IDs.
	(XmlWriter.write_family_handle): Use GRAMPS ID not DB handle.
	(XmlWriter.write_xml_data): Sort family IDs before writing.
	(XmlWriter.write_xml_data): Fixed families output by preventing
	confusion between handles and GRAMPS IDs.
	(XmlWriter.write_xml_data): Sort object IDs before writing.
	(XmlWriter.write_object): Use GRAMPS ID not DB handle.

	* src/RelLib.py (probably_alive): Fixed typo (bug #1012347).

2004-08-21  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/ReadGedcom.py (parse_record): Get objects from handles;
	(handle_source): Refer to handle, not the object; 
	(parse_source): Use gramps id (not handle) to form the title.
	* src/GrampsDbBase.py (get_person_from_handle): Typo;
	(find_event_from_handle): Correctly create new event if not found.
	* src/Sources.py (draw): Correctly sort, use gramps id when
	displaying sources; (redraw): Use gramps id in the list view.

	* src/AddSpouse.py, src/ChooseParents.py, src/EditPerson.py,
	src/EditPlace.py, src/EditSource.py, src/EventEdit.py,
	src/FamilyView.py, src/GenericFilter.py, 
	src/Marriage.py, src/PedView.py, src/PeopleModel.py,
	src/PlaceView.py, src/RelLib.py, src/SelectChild.py,
	src/Sort.py, src/SourceView.py, src/SubstKeywords.py,
	src/WriteGedcom.py, src/WriteXML.py, src/plugins/AncestorReport.py,
	src/plugins/Ancestors.py, src/plugins/ChangeTypes.py, 
	src/plugins/DescendReport.py, src/plugins/DetDescendantReport.py,
	src/plugins/EventCmp.py, src/plugins/FamilyGroup.py,