@@ -1,3 +1,8 @@
+2004-08-23  Tim Waugh  <twaugh@redhat.com>
+
+	* src/WriteGedcom.py (GedcomWriter.write_families): Write families
+	in GRAMPS ID order for easier change tracking.
+
 2004-08-22  Tim Waugh  <twaugh@redhat.com>
 
 	* src/WriteGedcom.py (GedcomWriter.export_data): Write individuals
